Fixed z-index issues with headers and #background-top

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -1,5 +1,8 @@
 .env {
     color: $lgrey;
+    #top-bar {
+        z-index: 3;
+    }
     main {
         margin-top: 40px;
         header {
@@ -8,6 +11,7 @@
             position: fixed;
             overflow: hidden;
             text-align: left;
+            z-index: 1;
             hgroup {
                 float: left;
                 width: 100%;
